--- a/BGMLoopUtility/forms/MainWindow.ui
+++ b/BGMLoopUtility/forms/MainWindow.ui
@@ -83,6 +83,15 @@ Please load wave-form file.
           <property name="text">
            <string>Semi-auto loop point detection</string>
           </property>
+          <property name="icon">
+           <iconset theme=":/pendulum"/>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>32</width>
+            <height>32</height>
+           </size>
+          </property>
          </widget>
         </item>
        </layout>
