--- a/BGMLoopUtility/forms/MainWindow.ui
+++ b/BGMLoopUtility/forms/MainWindow.ui
@@ -84,12 +84,13 @@ Please load wave-form file.
            <string>Semi-auto loop point detection</string>
           </property>
           <property name="icon">
-           <iconset theme=":/pendulum"/>
+           <iconset resource="../resources/resources.qrc">
+            <normaloff>:/pendulum</normaloff>:/pendulum</iconset>
           </property>
           <property name="iconSize">
            <size>
-            <width>32</width>
-            <height>32</height>
+            <width>48</width>
+            <height>48</height>
            </size>
           </property>
          </widget>
@@ -125,6 +126,8 @@ Please load wave-form file.
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="../resources/resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
